--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -12,10 +12,10 @@ $light: #af93f2;
 
 $input-border-color: #d0d0d0;
 
-$font-family-base: "Poppins",
-sans-serif !important;
+$font-family-base: "Poppins", sans-serif !important;
 
-$theme-colors: ("light-gray": #f2f2f2,
+$theme-colors: (
+  "light-gray": #f2f2f2,
 );
 
 // Import Bootstrap and its default variables
@@ -23,47 +23,47 @@ $theme-colors: ("light-gray": #f2f2f2,
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 body {
-    background-image: url("./imgs/background.png");
-    background-position: top;
-    background-repeat: no-repeat;
+  background-image: url("./imgs/background.png");
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 .page {
-    margin-top: 2 * $spacer;
-    margin-bottom: 2 * $spacer;
+  margin-top: 2 * $spacer;
+  margin-bottom: 2 * $spacer;
 }
 
 .user-pic {
-    height: 40px;
-    width: 40px;
+  height: 40px;
+  width: 40px;
 }
 
 .user-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
 }
 
 .item-img {
-    height: 150px;
-    object-fit: cover;
+  height: 150px;
+  object-fit: cover;
 }
 
 .crop-text-3 {
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
 .user-info {
-    min-width: 800px;
+  min-width: 800px;
 }
 
 #search-box {
-    padding: 0.75rem;
-    margin: 0.5em;
-    border-radius: 0.5em;
-    border: none;
+  padding: 0.75rem;
+  margin: 0.5em;
+  border-radius: 0.5em;
+  border: none;
 }
